fixed a bug related to the visibility of banner scrolling arrows

--- a/services/shop/src/components/UI/TransitionArrow/TransitionArrow.module.scss
+++ b/services/shop/src/components/UI/TransitionArrow/TransitionArrow.module.scss
@@ -10,7 +10,7 @@
     cursor: pointer;
     top: 46%;
     box-shadow: colors.$gray 0px 0px 16px;
-    z-index: 10;
+    z-index: 4;
     opacity: 0;
     background-color: transparent;
     transition: all 0.1s 0s;
